--- a/services.html
+++ b/services.html
@@ -15,32 +15,34 @@
 
 <!-- header -->
 
- <header>
-    <nav class="topNav whitebg">
-        <a href="#">
-            <div class="brand">
-                <img src="img/valtLogo.png" id="valtLogo" alt="valtira" />
-                <span class="valtiraTxt"> Valtira</span>
-            </div>
-        </a>
-        <ul>
-            <a href="index.html"><li>Home</li></a>
-            <a href="#"><li>Services</li></a>
-            <a href="#"><li>About</li></a>
-            <a href="#"><li>Contact</li></a>
-        </ul>
-    </nav>
-    <main class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-12">
-                <div class="content-blocks inner-header-blocks">
-                    <h2>we got skills</h2>
-                    <div class="prp-underline"></div>
-                    <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
+ <header class="servicesHeader">
+    <div class="jumboOverlay">
+        <nav class="topNav whitebg">
+            <a href="index.html">
+                <div class="brand whitebg">
+                    <img src="img/valtLogo.png" id="valtLogo" alt="valtira" />
+                    <span class="valtiraTxt"> Valtira</span>
+                </div>
+            </a>
+            <ul>
+                <a href="index.html"><li>Home</li></a>
+                <a href="#"><li>Services</li></a>
+                <a href="#"><li>About</li></a>
+                <a href="#"><li>Contact</li></a>
+            </ul>
+        </nav>
+        <main class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12">
+                    <div class="content-blocks inner-header-blocks">
+                        <h2>we got skills</h2>
+                        <div class="grn-underline"></div>
+                        <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
 </header>
 
 <!-- hamburger -->
@@ -58,7 +60,7 @@
                     <a href="#"><div class="card card-descr left">
                     <div id="triangle-topleft"></div>
                     <h2>Web Development</h2>
-                    <div class="tiny-underline-left"></div>
+                    <div class="tiny-underline-left-grn"></div>
                       <ul>
                         <li>Website development</li>
                         <li>Back end development</li>
@@ -68,7 +70,7 @@
                     </div></a>
                     <a href="#">
                         <div class="card card-img1 minimizedImg-right right"></div>
-                        <pre>caption</pre>
+                        <pre>Working at Valtira - An Inside View!</pre>
                     </a>
                 </div>
             </div>
@@ -77,7 +79,7 @@
                     <a href="#"><div class="card card-descr right">
                     <div id="triangle-left"></div>
                     <h2>Web Applications</h2>
-                    <div class="tiny-underline-left"></div>
+                    <div class="tiny-underline-left-grn"></div>
                       <ul>
                         <li>Single page apps</li>
                         <li>Interactive tools</li>
@@ -85,7 +87,7 @@
                     </div></a>
                     <a href="#">
                         <div class="card card-img2 minimizedImg-left left"></div>
-                        <pre>caption</pre>
+                        <pre>Working at Valtira - An Inside View!</pre>
                     </a>
                 </div>
             </div>
@@ -94,7 +96,7 @@
                     <a href="#"><div class="card card-descr left">
                     <div id="triangle-topleft"></div>
                     <h2>Technology Integrations</h2>
-                    <div class="tiny-underline-left"></div>
+                    <div class="tiny-underline-left-grn"></div>
                     <ul>
                         <li>CRM</li>
                         <li>E-Commerce</li>
@@ -104,7 +106,7 @@
                     </div></a>
                     <a href="#">
                         <div class="card card-img3 minimizedImg-right right"></div>
-                        <pre>caption</pre>
+                        <pre>Working at Valtira - An Inside View!</pre>
                     </a>
                 </div>
             </div>
@@ -113,7 +115,7 @@
                     <a href="#"><div class="card card-descr right">
                     <div id="triangle-left"></div>
                     <h2>Cloud Solutions</h2>
-                    <div class="tiny-underline-left"></div>
+                    <div class="tiny-underline-left-grn"></div>
                       <ul>
                         <li>Cloud architecture</li>
                         <li>AWS Hosting</li>
@@ -122,7 +124,7 @@
                     </div></a>
                     <a href="#">
                         <div class="card card-img2 minimizedImg-left left"></div>
-                        <pre>caption</pre>
+                        <pre>Working at Valtira - An Inside View!</pre>
                     </a>
                 </div>
             </div>
@@ -131,14 +133,14 @@
                     <a href="#"><div class="card card-descr left">
                     <div id="triangle-topleft"></div>
                     <h2>Content Management &amp; Marketing Automation</h2>
-                    <div class="tiny-underline-left"></div>
+                    <div class="tiny-underline-left-grn"></div>
                      <ul>
                         <li>Simplicis CMS</li>
                      </ul>
                      </div></a>
                     <a href="#">
                         <div class="card card-img3 minimizedImg-right right"></div>
-                        <pre>caption</pre>
+                        <pre>Working at Valtira - An Inside View!</pre>
                     </a>
                 </div>
             </div>
@@ -147,7 +149,7 @@
                     <a href="#"><div class="card card-descr right">
                     <div id="triangle-left"></div>
                     <h2>Digital Marketing</h2>
-                    <div class="tiny-underline-left"></div>
+                    <div class="tiny-underline-left-grn"></div>
                     <ul>
                         <li>Data &amp; Analytics</li>
                         <li>Pay-Per-Click (PPC)</li>
@@ -156,26 +158,32 @@
                     </div></a>
                     <a href="#">
                         <div class="card card-img2 minimizedImg-left  left"></div>
-                        <pre>caption</pre>
+                        <pre>Working at Valtira - An Inside View!</pre>
                     </a>
                 </div>
             </div>
         </div>
     </div>
+
+<!-- breaker -->
+
     <div class="breakers cloud-based">
         <main class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-12">
-                <div class="content-blocks">
-                    <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
-                    <div class="red-underline "></div>
-                    <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
-                    <a class="btn white-btn btn-4 btn-4e">our approach</a>
+            <div class="row">
+                <div class="col-sm-12 col-md-12">
+                    <div class="content-blocks">
+                        <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
+                        <div class="red-underline "></div>
+                        <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
+                        <a class="btn white-btn btn-4 btn-4e">our approach</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
     </div>
+
+<!-- content blocks -->
+
     <main class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
@@ -210,6 +218,8 @@
     </div>
 </div>
 
+<!-- head footer -->
+
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
@@ -220,7 +230,7 @@
         </div>
     </div>
 
-<!-- content blocks -->
+<!-- social media -->
 
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
