--- a/services.html
+++ b/services.html
@@ -5,13 +5,52 @@
     <title>Valtira | Services</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="css/link-hover.css" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
+    <link rel='stylesheet' type="text/css" href="css/animations.css" />
 </head>
 <body>
+
+<!-- hamburger -->
+
+    <a href="#cd-nav" class="cd-nav-trigger">
+        <button class="c-hamburger c-hamburger--htx">
+            <span>toggle menu</span>
+        </button>
+    </a>
+
+    <div id="cd-nav" class="cd-nav">
+        <div class="cd-navigation-wrapper">
+            <div class="cd-half-block">
+                <nav>
+                    <ul class="cd-primary-nav">
+                        <li><a href="#0" class="selected">Work</a></li>
+                        <li><a href="#0">Services</a></li>
+                        <li><a href="#0">Approach</a></li>
+                        <li><a href="#0">Blog</a></li>
+                        <li><a href="#0">About</a></li>
+                        <li><a href="#0">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- .cd-half-block -->
+
+            <div class="cd-half-block">
+                <address>
+                    <ul class="cd-contact-info">
+                        <li><a href="mailto:info@myemail.co">info@myemail.co</a></li>
+                        <li>0244-12345678</li>
+                        <li>
+                            <span>1201 S. Marquette Avenue</span>
+                            <span>#330</span>
+                            <span>Minneapolis, Minnesota 55403</span>
+                        </li>
+                    </ul>
+                </address>
+            </div> <!-- .cd-half-block -->
+        </div> <!-- .cd-navigation-wrapper -->
+    </div> <!-- .cd-nav -->
 
 <!-- header -->
 
@@ -44,12 +83,6 @@
         </main>
     </div>
 </header>
-
-<!-- hamburger -->
-
-    <button class="c-hamburger c-hamburger--htx">
-        <span>toggle menu</span>
-    </button>
 
 <!-- main content -->
 
@@ -251,4 +284,8 @@
 <script type="text/javascript" src="js/modernizr.custom.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="js/slider/jquery.ba-cond.min.js"></script>
+<script type="text/javascript" src="js/slider/jquery.slitslider.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="js/pinwheel.js"></script>
 </html>
