--- a/s-services.html
+++ b/s-services.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head class="no-js">
     <meta charset="UTF-8">
-    <title>Valtira | Services</title>
+    <title>Valtira | S-Services</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -22,7 +22,7 @@
         <li><a href="">About</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="">Work</a></li>
-        <li><a href="">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
     </ul>
@@ -39,7 +39,7 @@
         </div>
     </div>
     <a href="index.html">Home</a>
-    <a href="#">Services</a>
+    <a href="services.html">Services</a>
     <a href="#">Work</a>
     <a href="#">Blog</a>
     <a href="#">About</a>
@@ -54,13 +54,13 @@
 
 <!-- header -->
 
-<header class="servicesHeader">
+ <header class="servicesHeader2">
     <div class="jumboOverlay">
         <main class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="content-blocks inner-header-blocks">
-                        <h2>we got skills</h2>
+                        <h2>web development</h2>
                         <div class="grn-underline"></div>
                         <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
                     </div>
@@ -76,9 +76,9 @@
         <div class="container">
             <div class="row">
                 <div id="mainbox">
-                    <a href="s-services.html"><div class="card card-descr left">
+                    <a href="#"><div class="card card-descr left">
                     <div id="triangle-topleft"></div>
-                    <h2>Web Development</h2>
+                    <h2>UX Design</h2>
                     <div class="tiny-underline-left-grn"></div>
                       <ul>
                         <li>Website development</li>
@@ -86,7 +86,8 @@
                         <li>Mobile development</li>
                         <li>UI Design</li>
                       </ul>
-                    </div>
+                    </div></a>
+                    <a href="#">
                         <div class="card card-img1 minimizedImg-right right"></div>
                         <pre>Working at Valtira - An Inside View!</pre>
                     </a>
@@ -96,7 +97,7 @@
                 <div id="mainbox">
                     <a href="#"><div class="card card-descr right">
                     <div id="triangle-left"></div>
-                    <h2>Web Applications</h2>
+                    <h2>UI Design</h2>
                     <div class="tiny-underline-left-grn"></div>
                       <ul>
                         <li>Single page apps</li>
@@ -113,7 +114,7 @@
                 <div id="mainbox">
                     <a href="#"><div class="card card-descr left">
                     <div id="triangle-topleft"></div>
-                    <h2>Technology Integrations</h2>
+                    <h2>something cool</h2>
                     <div class="tiny-underline-left-grn"></div>
                     <ul>
                         <li>CRM</li>
@@ -132,7 +133,7 @@
                 <div id="mainbox">
                     <a href="#"><div class="card card-descr right">
                     <div id="triangle-left"></div>
-                    <h2>Cloud Solutions</h2>
+                    <h2>something cool</h2>
                     <div class="tiny-underline-left-grn"></div>
                       <ul>
                         <li>Cloud architecture</li>
@@ -150,7 +151,7 @@
                 <div id="mainbox">
                     <a href="#"><div class="card card-descr left">
                     <div id="triangle-topleft"></div>
-                    <h2>Content Management &amp; Marketing Automation</h2>
+                    <h2>something cool</h2>
                     <div class="tiny-underline-left-grn"></div>
                      <ul>
                         <li>Simplicis CMS</li>
@@ -166,7 +167,7 @@
                 <div id="mainbox">
                     <a href="#"><div class="card card-descr right">
                     <div id="triangle-left"></div>
-                    <h2>Digital Marketing</h2>
+                    <h2>something cool</h2>
                     <div class="tiny-underline-left-grn"></div>
                     <ul>
                         <li>Data &amp; Analytics</li>
@@ -183,21 +184,76 @@
         </div>
     </div>
 
-<!-- breaker -->
+<!-- content blocks -->
 
-    <div class="breakers cloud-based">
-        <main class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-12">
-                    <div class="content-blocks">
-                        <h2>Need a Cloud-based Fully-Customizeable “Magic” CMS?</h2>
-                        <div class="red-underline "></div>
-                        <p> Valtira has a unique approach to delivering robust web solutions. We work with your team &amp; offer the skills that compliment.</p>
-                        <a class="btn white-btn btn-4 btn-4e">our approach</a>
+<main class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-12">
+            <div class="content-blocks sm-content-blocks">
+                <h2>we know programming</h2>
+                <div class="red-underline"></div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<!-- slit slider -->
+
+    <div class="sm-dynamic-containers demo-1">
+        <div id="slider" class="sl-slider-wrapper">
+            <div class="sl-slider">
+                <div class="sl-slide" data-orientation="vertical" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
+                    <div class="svgs-sliders">
+                        <div class="svg-slider-inner">
+                    <img src="img/lang-svg/ajax.svg" alt="ajax" />
+                    <img src="img/lang-svg/apex.svg" alt="ajax" />
+                    <img src="img/lang-svg/brightscript.svg" alt="ajax" />
+                        </div>
+                    </div>
+                </div>
+                <div class="sl-slide" data-orientation="vertical" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
+                    <div class="svgs-sliders">
+                        <div class="svg-slider-inner">
+                    <img src="img/lang-svg/jsp.svg" alt="ajax" />
+                    <img src="img/lang-svg/mysql.svg" alt="ajax" id="mysqlicon" />
+                    <img src="img/lang-svg/jstl.svg" alt="ajax" />
+                        </div>
+                    </div>
+                </div>
+                <div class="sl-slide" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
+                    <div class="svgs-sliders">
+                        <div class="svg-slider-inner">
+                    <img src="img/lang-svg/xml.svg" alt="ajax" />
+                    <img src="img/lang-svg/sql.svg" alt="ajax" id="sqlicon" />
+                    <img src="img/lang-svg/xml.svg" alt="ajax" />
+                        </div>
                     </div>
                 </div>
             </div>
-        </main>
+            <div class="hoverEffects svg-wrap">
+                <svg width="64" height="64" viewBox="0 0 64 64">
+                    <path id="arrow-left-4" d="M15.946 48l0.003-10.33 47.411 0.003v-11.37h-47.414l0.003-10.304-15.309 16z" />
+                </svg>
+                <svg width="64" height="64" viewBox="0 0 64 64">
+                    <path id="arrow-right-4" d="M48.058 48l-0.003-10.33-47.414 0.003v-11.37h47.418l-0.003-10.304 15.306 16z" />
+                </svg>
+            </div>
+            <nav id="nav-arrows" class="nav-roundslide">
+                <a class="prev" href="/item1">
+                    <span class="icon-wrap"><svg class="icon" width="32" height="32" viewBox="0 0 64 64"><use xlink:href="#arrow-left-4"></svg></span>
+                    <h3>Prev Client...</h3>
+                </a>
+                <a class="next" href="/item3">
+                    <span class="icon-wrap"><svg class="icon" width="32" height="32" viewBox="0 0 64 64"><use xlink:href="#arrow-right-4"></svg></span>
+                    <h3>Next Client...</h3>
+                </a>
+            </nav>
+            <nav id="nav-dots" class="nav-dots">
+                <span class="nav-dot-current"></span>
+                <span></span>
+                <span></span>
+            </nav>
+        </div>
     </div>
 
 <!-- content blocks -->
