--- a/index.html
+++ b/index.html
@@ -13,92 +13,77 @@
 </head>
 <body>
 
-<!-- hamburger -->
+<!-- nav -->
 
-    <a href="#cd-nav" class="cd-nav-trigger">
-        <button class="c-hamburger c-hamburger--htx">
-            <span>toggle menu</span>
-        </button>
-    </a>
+<nav class="topNav">
+    <ul>
+        <li><a href="" burger="01" class="hamburger-trigger"></a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="services.html">Work</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="index.html" class="brand"><img src="img/valtLogo.png" alt="valtiraLogo" width="17%" /> VALTIRA</a></li>
+    </ul>
+</nav>
 
-    <div id="cd-nav" class="cd-nav">
-        <div class="cd-navigation-wrapper">
-            <div class="cd-half-block">
-                <nav>
-                    <ul class="cd-primary-nav">
-                        <li><a href="#0" class="selected">Work</a></li>
-                        <li><a href="#0">Services</a></li>
-                        <li><a href="#0">Approach</a></li>
-                        <li><a href="#0">Blog</a></li>
-                        <li><a href="#0">About</a></li>
-                        <li><a href="#0">Contact</a></li>
-                    </ul>
-                </nav>
-            </div><!-- .cd-half-block -->
+<!-- side popup nav -->
 
-            <div class="cd-half-block">
-                <address>
-                    <ul class="cd-contact-info">
-                        <li><a href="mailto:info@myemail.co">info@myemail.co</a></li>
-                        <li>0244-12345678</li>
-                        <li>
-                            <span>1201 S. Marquette Avenue</span>
-                            <span>#330</span>
-                            <span>Minneapolis, Minnesota 55403</span>
-                        </li>
-                    </ul>
-                </address>
-            </div> <!-- .cd-half-block -->
-        </div> <!-- .cd-navigation-wrapper -->
-    </div> <!-- .cd-nav -->
+<aside class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-right" id="cbp-spmenu-s2">
+    <div class="side-trigger">
+        <div id="burger" id="showRight">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+    <a href="#">Home</a>
+    <a href="services.html">Services</a>
+    <a href="#">Work</a>
+    <a href="#">Blog</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <div href="#" class="">
+        <a href="https://twitter.com/valtira" target="_blank"><div><i class="fa fa-twitter fa-lg"></i></div></a>
+        <a href="https://www.linkedin.com/company/valtira" target="_blank"><div><i class="fa fa-linkedin fa-lg"></i></div></a>
+        <a href="https://www.facebook.com/ValtiraLLC/" target="_blank"><div><i class="fa fa-facebook fa-lg"></i></div></a>
+        <a href="https://plus.google.com/+ValtiraLLC/posts" target="_blank"><div><i class="fa fa-google-plus fa-lg"></i></div></a>
+    </div>
+</aside>
 
 <!-- header -->
 
-    <header>
-        <div class="jumbotron home">
-            <div class="jumboOverlay">
-                <nav class="topNav">
-                    <a href="index.html">
-                        <div class="brand">
-                            <img src="img/valtLogo.png" id="valtLogo" alt="valtiraLogo" />
-                            <span class="valtiraTxt"> Valtira</span>
-                        </div>
-                    </a>
-                    <ul>
-                        <a href="#"><li>Home</li></a>
-                        <a href="services.html"><li>Services</li></a>
-                        <a href="#"><li>About</li></a>
-                        <a href="#"><li>Contact</li></a>
-                    </ul>
-                </nav>
-                <section class="homepageHeader">
-                    <h1>Welcome to Valtira</h1>
-                    <div class="grn-underline"></div>
-                    <p>We do work that matters</p>
-                </section>
-
-                <div class="header-blocks">
-                    <a href="#next"><div class="down-button bounce"><i class="glyphicon glyphicon-chevron-down fa-2x"></i></div></a>
-                </div>
-            </div>
+<div class="jumbotron home">
+    <div class="jumboOverlay">
+        <section class="homepageHeader">
+            <h1>Welcome to Valtira</h1>
+            <div class="grn-underline"></div>
+            <p>We do work that matters</p>
+        </section>
+        <div class="header-blocks">
+            <a href="#next"><div class="down-button"><i class="glyphicon glyphicon-chevron-down fa-2x"></i></div></a>
         </div>
-    </header>
+    </div>
+</div>
 
 <!-- content blocks -->
 
     <a name="next"></a>
-    <main class="container">
+    <section class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="content-blocks">
                     <h2>we challenge benchmarks &amp; push boundaries</h2>
                     <div class="blu-underline"></div>
-                    <p>Whether you need a small, single page application or a large, complex responsive website, Valtira has the resources and skills to architect, design, and build a gorgeous, secure, scalable solution.</p>
+                    <p>Whether you need a small, single page application or a large,
+                    complex responsive website, Valtira has the resources and skills to
+                    architect, design, and build a gorgeous, secure, scalable solution.</p>
                     <a class="btn blue-btn btn-1 btn-1e" href="services.html">our services</a>
                 </div>
             </div>
         </div>
-    </main>
+    </section>
 
 <!-- pinwheel -->
 
@@ -136,7 +121,7 @@
 
 <!-- content blocks -->
 
-    <main class="container">
+    <section class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="content-blocks">
@@ -147,7 +132,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    </section>
 
 <!-- slit slider -->
 
@@ -216,7 +201,9 @@
         </div>
     </div>
 
-    <main class="container">
+<!-- prefooter -->
+
+    <section class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
                 <div class="content-blocks">
@@ -227,7 +214,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    </section>
 
 <!-- footer -->
 
@@ -238,7 +225,7 @@
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8">
             <ul class="lower-links">
             <li><a href="#">Work</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#">Approach</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Careers</a></li>
@@ -259,14 +246,13 @@
         </div>
     </div>
 
-<!-- content blocks -->
-
     <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 text-center">
             <ul class="footer-social">
-                <li class="social-circles"></li>
-                <li class="social-circles"></li>
-                <li class="social-circles"></li>
+                <a href="https://twitter.com/valtira" target="_blank"><li class="social-circles"><i class="fa fa-twitter fa-2x"></i></li></a>&nbsp;
+                <a href="https://www.facebook.com/ValtiraLLC/" target="_blank"><li class="social-circles"><i class="fa fa-facebook fa-2x"></i></li></a>&nbsp;
+                <a href="https://www.linkedin.com/company/valtira" target="_blank"><li class="social-circles"><i class="fa fa-linkedin fa-2x"></i></li></a>&nbsp;
+                <a href="https://plus.google.com/+ValtiraLLC/posts" target="_blank"><li class="social-circles"><i class="fa fa-google-plus fa-2x"></i></li></a>
             </ul>
             <small>1201 S. Marquette Avenue #330 Minneapolis, Minnesota 55403   |   &copy; 2015 Valtira LLC </small>
         </div>
@@ -287,35 +273,3 @@
 <script type="text/javascript" src="js/easing.js"></script>
 <script type="text/javascript" src="js/pinwheel.js"></script>
 </html>
-<script type="text/javascript">
-
-// scripts for navigation
-
-
-// scripts for pinwheel slider
-
-            jQuery(document).ready(function() {
-
-            args = {
-
-                animationEasing:"swing",
-                carouselSpeed:500,
-                autoPlay: 8000,rightButtonTag:   "#pinwheel_slider_1_next", leftButtonTag:   "#pinwheel_slider_1_prev",
-                preload: true,
-                largeFeatureWidth:450,
-                largeFeatureHeight:300,
-                smallFeatureWidth:250,
-                smallFeatureHeight:200,
-                smallFeatureOffset:30,
-                topPadding:0,
-                sidePadding:0,
-                minimize:false,
-                sliderMaxWidth:900,
-                sliderMaxHeight:350,
-                prettyphoto:true,
-                slider_handle:"pinwheel_slider_1"
-            };
-        var pinwheel_slider_1_c = jQuery("#pinwheel_slider_1").pinwheel(args);jQuery(window).on("debouncedresize",function() {
-                        pinwheel_slider_1_c.reload(args);
-                });jQuery("#pinwheel_slider_1 .wpsc_buy_button").css({ "background":"#3DB432","font-size":"14px","color":"#ffffff","border":"1px solid #3db432"});  });
-</script>
